--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -70,7 +70,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="\imgs\prueba.jpg" class="d-block w-100" alt="...">
+                    <img src="/imgs/prueba.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
                     <img src="\imgs\prueba2.jpg" class="d-block w-100" alt="...">
@@ -318,7 +318,7 @@
         <div class="social-media">
             <h5>Seguínos en</h5>
             <article class="iconos">
-                <a target="_blank" href="https://youtube.com"><img src="\imgs\youtube.png" alt="Logo Youtube"/></a>
+                <a target="_blank" href="https://youtube.com"><img src="/imgs/youtube.png" alt="Logo Youtube"/></a>
                 <a target="_blank" href="https://linkedin.com"><img src="\imgs\linkedin.png" alt="Logo Linkedin"/></a>
                 <a target="_blank" href="https://facebook.com"><img src="\imgs\facebook.png" alt="Logo Twitter"/></a>
                 <a target="_blank" href="https://twitter.com"><img src="\imgs\twitter.png" alt="Logo Facebook"/></a>
@@ -343,7 +343,7 @@
 
     </footer>
 
-    <script src="js/main.js" type="module"></script>
+    <script src="/js/main.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
