header funcionando en partials. Se uniformizo el header usando el de la vista index

--- a/src/views/detalleproducto.ejs
+++ b/src/views/detalleproducto.ejs
@@ -2,18 +2,7 @@
 <html lang="en">
     <%- include('./partials/head')%>
 <body>
-
-    <header>
-
-        <div class="barra-blanca">
-            <nav class="navbar">
-                <a href="/"><h1>CARMAKERS</h1></a>
-                <button class="menu">Menú</button>
-        </nav>
-        </div>
-
-
-    </header>
+    <%- include('./partials/header')%>
 
 
     <main class="main-article">
