--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,46 +3,7 @@
     <%- include('./partials/head')%>
 <body>
 
-    <header>
-
-        <div class="barra-blanca">
-
-            <!--Navegador mobile-->
-            <nav class="navbar">
-
-                <a href="/"><h1>CARMAKERS</h1></a>
-
-                <button class="cruz" type="button"><i class="fa-solid fa-xmark"></i></button>
-
-                <ul class="enlaces-menu">
-                    <li><a href="/login" class="cuenta">Cuenta</a></li>
-                    <li><a href="/Carrito">Carrito</a></li>
-                    <li><a href="/Carrito">Comprar</a></li>
-                    <li><a href="/Contacto">Contacto</a></li>
-                    <li><a href="/Contacto">Soporte</a></li>
-                </ul>
-
-
-
-                <button class="menu" type="button">Menú</button>
-                <button class="cuenta-button" type="button"><a href="/login">Cuenta</a></button>
-                <button class="carrito-button" type="button"><a href="/Carrito">Carrito</a></button>
-
-
-                <ul class="enlaces-productos">
-                    <li><a href="#seccion-uno">Modelo 1</a></li>
-                    <li><a href="#seccion-dos">Modelo 2</a></li>
-                    <li><a href="#seccion-tres">Modelo 3</a></li>
-                    <li><a href="#seccion-cuatro">Modelo 4</a></li>
-                    <li><a href="#seccion-cinco">Modelo 5</a></li>
-                </ul>
-
-        </nav>
-
-
-        </div>
-
-    </header>
+    <%- include('./partials/header')%>
 
 
     <main>
