--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -2,26 +2,11 @@
 <html lang="en">
     <%- include('./partials/head')%>
 <body>
-    <body>
+    <%- include('./partials/header')%>
 
-
-        <header>
-
-            <div class="barra-blanca">
-                <nav class="navbar">
-                    <a href="/"><h1>CARMAKERS</h1></a>
-                    <button class="menu">Menú</button>
-            </nav>
-            </div>
-    
-        </header>
-
-
-        <main>
+    <main>
 
             <div clas="big-container">
-
-
 
                 <div class="single-column">
                 <form action="/" method="POST" class="form-login">
