--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -112,20 +112,10 @@
 
     </main>
 
-    <footer id="footer-carrito">
-
-        <div class="copy-carrito">
-            <p class="car-carrito">CarMakers © 2022</p>
-        </div>
-
-        <div class="links-carrito">
-            <a href="/sobrenosotros.html">Sobre Nosotros</a>
-            <a href="/terminos.html">Términos y condiciones</a>
-        </div>
-
-    </footer>
+    <%- include('./partials/footer-2')%>
 
 
+    <script src="/js/main.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
