--- a/src/views/detalleproducto.ejs
+++ b/src/views/detalleproducto.ejs
@@ -100,53 +100,9 @@
     </main>
 
 
-    
-    <footer>
-        <h4 class="carmakers">CARMAKERS</h4>
+    <%- include('./partials/footer-3')%>
 
-
-        <form class="form-footer">
-            <h5>Sumate al newsletter</h5>
-
-            <input type="email" placeholder="tuemail@ejemplo.com" class="email" required="">
-
-            <div class="terminos">
-                <input type="checkbox" name="datos" value="email" required>
-                <label for="datos">Acepto términos y condiciones</label>
-            </div>
-
-            <button type="submit" class="suscribirme">SUSCRIBIRME</button>
-        </form>
-
-        <div class="social-media">
-            <h5>Seguínos en</h5>
-            <article class="iconos">
-                <a href="https://youtube.com"><img src="\imgs\youtube.png" alt="Logo Youtube"/></a>
-                <a href="https://linkedin.com"><img src="\imgs\linkedin.png" alt="Logo Linkedin"/></a>
-                <a href="https://facebook.com"><img src="\imgs\facebook.png" alt="Logo Twitter"/></a>
-                <a href="https://twitter.com"><img src="\imgs\twitter.png" alt="Logo Facebook"/></a>
-                <a href="https://instagram.com"><img src="\imgs\instagram.png" alt="Logo Instagram"/></a>
-            </article>
-        </div>
-
-
-        <div class="links">
-            <a href="/sobrenosotros.html">Sobre Nosotros</a>
-            <a href="/terminos.html">Términos y condiciones</a>
-            <a href="/cookies.html">Política de cookies</a>
-            <a href="/privacidad.html">Política de privacidad</a>
-        </div>
-
-
-        <div class="copy">
-            <p class="2022">CarMakers © 2022, </p>
-            <p class="derechos">Todos los derechos reservados</p>
-        </div>
-
-
-    </footer>
-
-
+    <script src="/js/main.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
