--- a/src/views/partials/footer-1.ejs
+++ b/src/views/partials/footer-1.ejs
@@ -17,12 +17,12 @@
 
         <div class="social-media">
             <h5>Seguínos en</h5>
-            <article class="iconos">
-                <a target="_blank" href="https://youtube.com"><img src="\imgs\youtube.png" alt="Logo Youtube"/></a>
-                <a target="_blank" href="https://linkedin.com"><img src="\imgs\linkedin.png" alt="Logo Linkedin"/></a>
-                <a target="_blank" href="https://facebook.com"><img src="\imgs\facebook.png" alt="Logo Twitter"/></a>
-                <a target="_blank" href="https://twitter.com"><img src="\imgs\twitter.png" alt="Logo Facebook"/></a>
-                <a target="_blank" href="https://instagram.com"><img src="\imgs\instagram.png" alt="Logo Instagram"/></a>
+            <article class="iconos-mobile">
+                <a target="_blank" href="https://youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                <a target="_blank" href="https://linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a target="_blank" href="https://facebook.com"><i class="fa-brands fa-twitter"></i></a>
+                <a target="_blank" href="https://twitter.com"><i class="fa-brands fa-facebook-f"></i></a>
+                <a target="_blank" href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
             </article>
         </div>
 
