--- a/src/views/partials/footer-2.ejs
+++ b/src/views/partials/footer-2.ejs
@@ -6,7 +6,7 @@
 
     <div class="links-carrito">
         <a href="/sobrenosotros.html">Sobre Nosotros</a>
-        <a href="/terminos.html">Términos y condiciones</a>
+        <a href="/terminos.html">Términos y Condiciones</a>
     </div>
 
 </footer>
