--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <%- include('./partials/head')%>
 <body>
-    <%- include('./partials/header')%>
+    <%- include('./partials/header-2')%>
 
     <main class="main-carrito">
 
