--- a/src/views/detalleproducto.ejs
+++ b/src/views/detalleproducto.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <%- include('./partials/head')%>
 <body>
-    <%- include('./partials/header')%>
+    <%- include('./partials/header-2')%>
 
 
     <main class="main-article">
@@ -100,7 +100,7 @@
     </main>
 
 
-    <%- include('./partials/footer-3')%>
+    <%- include('./partials/footer-1')%>
 
     <script src="/js/main.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
