--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,13 +11,13 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/imgs/prueba.jpg" class="d-block w-100" alt="...">
+                    <img src="/imgs/banner1.jpg" class="d-block w-100" alt="..." id="banner-uno">
                   </div>
                   <div class="carousel-item">
-                    <img src="\imgs\prueba2.jpg" class="d-block w-100" alt="...">
+                    <img src="\imgs\banner2.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="\imgs\prueba3.jpg" class="d-block w-100" alt="...">
+                    <img src="\imgs\banner3.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -46,7 +46,7 @@
               </div>
 
               <div class="icon-arrow-main">
-                <a href="#seccion-uno"><i class="fas fa-solid fa-angle-down"></i></a>
+                <a href="#seccion-1"><i class="fas fa-solid fa-angle-down"></i></a>
             </div>
 
         </section>
@@ -59,162 +59,11 @@
         </section>
 
 
+        
+       <%- include ('./partials/secciones') %>
 
 
-        <section id="seccion-uno">
-
-            <div class="texto-uno">
-                <h2 class="nombre-auto-uno">Modelo 1</h2>
-                <h3 class="desc-auto-uno">Conocé <a href="">acá</a> ofertas exclusivas</h3>
-            </div>
-
-            <div class="botones-container">
-            <div class="botones">
-                <a href="/detalleproducto">
-                    <button type="button" class="saber-mas">SABER MÁS</i></button>
-                </a>
-
-                <a href="/carrito">
-                    <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
-                </a>
-            
-            </div>
-            
-        </div>
-
-        <div class="icon-arrow">
-            <a href="#seccion-dos"><i class="fas fa-solid fa-angle-down"></i></a>
-        </div>
-              
-
-        </section>
-
-
-
-
-
-        <section id="seccion-dos">
-
-            <div class="texto-uno">
-                <h2 class="nombre-auto-uno">Modelo 2</h2>
-                <h3 class="desc-auto-uno">Conocé <a href="">acá</a> ofertas exclusivas</h3>
-            </div>
-
-            <div class="botones-container">
-
-            <div class="botones">
-                <a href="/detalleproducto">
-                    <button type="button" class="saber-mas">SABER MÁS</i></button>
-                </a>
-                <a href="/carrito">
-                    <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
-                </a>
-            
-            </div>
-
-        </div>
-
-        <div class="icon-arrow">
-            <a href="#seccion-tres"><i class="fas fa-solid fa-angle-down"></i></a>
-        </div>
-
-        </section>
-
-
-
-
-
-        <section id="seccion-tres">
-
-            <div class="texto-uno">
-                <h2 class="nombre-auto-uno">Modelo 3</h2>
-                <h3 class="desc-auto-uno">Conocé <a href="">acá</a> ofertas exclusivas</h3>
-            </div>
-
-            <div class="botones-container">
-
-            <div class="botones">
-                <a href="/detalleproducto">
-                    <button type="button" class="saber-mas">SABER MÁS</i></button>
-                </a>
-                <a href="/carrito">
-                    <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
-                </a>
-
-            </div>
-         </div>
-
-            <div class="icon-arrow">
-                <a href="#seccion-cuatro"><i class="fas fa-solid fa-angle-down"></i></a>
-            </div>
-
-        </section>
-
-
-
-
-
-        <section id="seccion-cuatro">
-
-            <div class="texto-uno">
-                <h2 class="nombre-auto-uno">Modelo 4</h2>
-                <h3 class="desc-auto-uno">Conocé <a href="">acá</a> ofertas exclusivas</h3>
-            </div>
-
-            <div class="botones-container">
-
-            <div class="botones">
-                <a href="/detalleproducto">
-                    <button type="button" class="saber-mas">SABER MÁS</i></button>
-                </a>
-                <a href="/carrito">
-                    <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
-                </a>
-
-            </div>
-        </div>
-
-            <div class="icon-arrow">
-                <a href="#seccion-cinco"><i class="fas fa-solid fa-angle-down"></i></a>
-            </div>
-
-        </section>
-
-
-
-
-
-        <section id="seccion-cinco">
-
-            <div class="texto-uno">
-                <h2 class="nombre-auto-uno">Modelo 5</h2>
-                <h3 class="desc-auto-uno">Conocé <a href="">acá</a> ofertas exclusivas</h3>
-            </div>
-
-
-            <div class="botones-container">
-            
-            <div class="botones">
-                <a href="/detalleproducto">
-                    <button type="button" class="saber-mas">SABER MÁS</i></button>
-                </a>
-                <a href="/carrito">
-                    <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
-                </a>
-
-            </div>
-        </div>
-
-            <div class="icon-arrow">
-                <a href="#cincopasos"><i class="fas fa-solid fa-angle-down"></i></a>
-            </div>
-
-        </section>
-
-
-
-
-        <section class="cincopasos" id="cincopasos">
+        <section class="cincopasos" id="seccion-6">
             <h6>PODÉS TENER TU AUTO EN 5 PASOS</h6>
 
         <div class="ambos-container">
