--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -19,14 +19,12 @@
             <button class="cuenta-button" type="button"><a href="/login">Cuenta</a></button>
             <button class="carrito-button" type="button"><a href="/Carrito">Carrito</a></button>
 
-
-            <ul class="enlaces-productos">
-                <li><a href="#seccion-uno">Modelo 1</a></li>
-                <li><a href="#seccion-dos">Modelo 2</a></li>
-                <li><a href="#seccion-tres">Modelo 3</a></li>
-                <li><a href="#seccion-cuatro">Modelo 4</a></li>
-                <li><a href="#seccion-cinco">Modelo 5</a></li>
-            </ul>
+            
+                <ul class="enlaces-productos">
+                    <% for(i=1; i<6; i++){ %>
+                    <li><a href="#seccion-<%=i%>">Modelo <%=i%></a></li>
+                    <% } %>
+                </ul>
 
     </nav>
 
