--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -39,7 +39,7 @@
               </div>
 
               <div class="box-container">
-                  <form class="elements-container">
+                  <form action='/' method="GET" class="elements-container">
                         <input type="text" placeholder="Modelos, características, servicios" class="search" required="">
                         <button type="submit" class="boton-lupa"><i class="fas fa-search" id="icono-lupa"></i></button>
                   </form>
