--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -10,6 +10,8 @@
 
         <section class="main-section">
 
+            <h2 class="mis-compras-dos">Mis compras</h2>
+
             <div class="flexbox-seccion">
 
             <div class="nombre-imagen">
