Carrito version desktop y tablet

--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -81,13 +81,13 @@
                     <input type="number" name="monto" id="giftcard" placeholder="Monto a utilizar" required>
                 </div>
 
-                <div class="flex-envio">
+                <div class="checkout">
                     <h5>Envío</h5>
                     <h6>Calculado en el checkout</h6>
                 </div>
 
 
-                <div class="flex-impuesto">
+                <div class="checkout">
                     <h5>Impuestos</h5>
                     <h6>Calculado en el checkout</h6>
                 </div>
