--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -47,7 +47,7 @@
         <p class="no-account">¿No tiene una cuenta?</p>
 
         <div class="boton-crear-cuenta">
-            <button class="account-button" type="submit" name="ingreso">CREAR UNA CUENTA</button>
+            <button class="account-button" type="submit" name="ingreso"><a href="/register">CREAR UNA CUENTA</a></button>
         </div>
 
         </div>
