--- a/src/views/partials/header-2.ejs
+++ b/src/views/partials/header-2.ejs
@@ -11,6 +11,7 @@
                 <li><a href="/Carrito">Comprar</a></li>
                 <li><a href="/Contacto">Contacto</a></li>
                 <li><a href="/Contacto">Soporte</a></li>
+                <li><a href="/admin">Admin</a></li>
             </ul>
 
 
