--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -58,7 +58,7 @@
 
 
         <div class="boton-crear-cuenta">
-            <button class="account-button" type="submit" name="ingreso">INICIAR SESIÓN</button>
+            <button class="account-button" type="submit" name="ingreso"><a href="/login">INICIAR SESIÓN</a></button>
         </div>
 
         </div>
