--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -11,7 +11,8 @@
                 <li><a href="/Carrito">Comprar</a></li>
                 <li><a href="/Contacto">Contacto</a></li>
                 <li><a href="/Contacto">Soporte</a></li>
-                <li><a href="/admin">Admin</a></li>
+                <li><a href="/crearproducto">Crear Producto</a></li>
+                <li><a href="/editarproducto">Editar Producto</a></li>
             </ul>
 
 
