Agregué split scroll y mejore la version desktop del detalle de producto

--- a/src/views/editarproducto.ejs
+++ b/src/views/editarproducto.ejs
@@ -34,7 +34,7 @@ Precio (p​ rice​)
                         <input type="textarea" name="descripcionProducto" id="descripcionProducto" required>
 
                         <label for="correo" class="label-correo">Imagen del producto</label>
-                        <input type="file" name="correo" id="correo" required>
+                        <input type="file" name="correo" id="correo-imagen" required>
 
                         <label for="precioProducto" class="label-correo">Precio</label>
                         <input type="textarea" name="precioProducto" id="precioProducto" required>
