--- a/src/views/detalleproducto.ejs
+++ b/src/views/detalleproducto.ejs
@@ -6,7 +6,40 @@
 
 
 
-    <main class="main-article">
+    <main class="main-article" id="main-detalle">
+
+        <div class="slider-vh">
+
+        <section id="main-section-index-2" class="slider-centro">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="/imgs/autosinfondoblanco.png" class="d-block w-100" alt="..." id="banner-uno">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/imgs/autosinfondoblanco.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/imgs/autosinfondoblanco.png" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+                
+              </div>
+
+        </section>
+    </div>
+
+
+
+        <div id="div-detalle">
 
         <div class="flex-texto">
             <p class="texto"><%= modelos.nombreModelo%><%= modelos.descripcion%></p>
@@ -17,10 +50,17 @@
             <img src="\imgs\autosinfondoblanco.png" alt="Foto del producto" class="foto-principal">
         </div>
 
-        <section>
+        <section class="scroll">
+
+            <div class="flex-texto-2">
+                <p class="texto"><%= modelos.nombreModelo%><%= modelos.descripcion%></p>
+                <i class="fas fa-solid fa-info"></i>
+            </div>
+
+
             <article>
                 <div class="modelo-delivery">
-                    <h2>Modelo <%= modelos.nombreModelo%> </h2>
+                    <h2 class="titulo-modelo">Modelo <%= modelos.nombreModelo%> </h2>
                     <h3>Delivery estimado <%= modelos.deliveryEstimado%></h3>
                 </div>
             
@@ -96,14 +136,18 @@
 
         </section>
 
+    </div>
+
 
 
     </main>
 
 
-    <%- include('./partials/footer-1')%>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/jquery.ScrollMagic.min.js"></script>
 
     <script src="/js/main.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
+
