--- a/src/views/partials/secciones.ejs
+++ b/src/views/partials/secciones.ejs
@@ -9,7 +9,7 @@
     
         <div class="botones-container">
         <div class="botones">
-            <a href="/detalleproducto">
+            <a href="/detalleproducto/<%= productosParseados[i-1].idModelo %>"> <!--acá va -1 porque el for empieza en 1 y necesitamos que muestre el primer objeto del array JSON-->
                 <button type="button" class="saber-mas">SABER MÁS</i></button>
             </a>
     
