--- a/src/views/partials/header-2.ejs
+++ b/src/views/partials/header-2.ejs
@@ -21,6 +21,13 @@
             <button class="cuenta-button" type="button"><a href="/login">Cuenta</a></button>
             <button class="carrito-button" type="button"><a href="/Carrito">Carrito</a></button>
 
+            
+                <ul class="enlaces-productos" id="ocultar-nav">
+                    <% for(i=1; i<6; i++){ %>
+                    <li>Modelo</li>
+                    <% } %>
+                </ul>
+
     </nav>
 
 
