--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <%- include('./partials/head')%>
-<body>
+<body class="body-reg">
     <%- include('./partials/header-2')%>
 
     <main>
-
-            <div clas="big-container">
 
                 <div class="single-column">
                 <form action="/" method="POST" class="form-login">
