--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -348,7 +348,6 @@ img{
     color:#11151a;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    margin:3px;
 }
 
 .desc-auto-uno{
@@ -1226,7 +1225,7 @@ main section article div h3{
 
 /*---EDICION PRODUCTO---*/
 
-#correo {
+#correo-imagen {
     background-color: white;
 } 
 
