Branch del MVC de productos

--- a/src/views/detalleproducto.ejs
+++ b/src/views/detalleproducto.ejs
@@ -42,7 +42,7 @@
         <div id="div-detalle">
 
         <div class="flex-texto">
-            <p class="texto"><%= modelos.nombreModelo%><%= modelos.descripcion%></p>
+            <p class="texto"><%= modelos.descripcion%></p>
             <i class="fas fa-solid fa-info"></i>
         </div>
 
@@ -53,7 +53,7 @@
         <section class="scroll">
 
             <div class="flex-texto-2">
-                <p class="texto"><%= modelos.nombreModelo%><%= modelos.descripcion%></p>
+                <p class="texto"><%= modelos.descripcion%></p>
                 <i class="fas fa-solid fa-info"></i>
             </div>
 
