--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1512,8 +1512,10 @@ main section article div h3{
     color:#313131;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    padding: 0;
+    padding: 5px;
     margin: 0;
+    background-color: transparent;
+    border-radius: 5px;
 }
 
 
@@ -1738,3 +1740,8 @@ main section article div h3{
     color:#939393;
 }
 
+
+.enlaces-productos li a:hover{
+    background-color: #ececec;
+    color:#313131;
+}
